2009-11-11  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* deployment.cpp|h:
	* list.cpp|h: Inline a few methods which are used very often.

2009-11-10  Larry Ewing  <lewing@novell.com>

	* frameworkelement.cpp:
	* frameworkelement.h:
	* uielement.cpp: Rework hit testing to use InsideObject so that we
	don't have to guess at fill and stroke values when doing testing.
	Consider the global clip on short circuiting and the layout clip
	on the element.

	* textblock.cpp:
	* textblock.h: Implement the rules for textblock hitting.

	* border.cpp:
	* glyphs.cpp:
	* glyphs.h:
	* layoutinformation.cpp:
	* media.cpp:
	* media.h:
	* shape.cpp:  Rework to use the new clip helper methods.

	r: spouliot
	
2009-11-10  Jackson Harper  <jackson@ximian.com>

	* resources.cpp: Hack that allows us to add the same item to
	multiple resource dictionaries.

	r: rolf

2009-11-10  Larry Ewing  <lewing@novell.com>

	* bitmapimage.cpp:
	* bitmapsource.cpp:
	* brush.cpp: Get overly aggressive about invalidations.

	* uielement.cpp:
	* uielement.h:
	* frameworkelement.cpp: rework the values we store for
	layout. Keep track of the raw results of measure and feed them
	back into the arrange along with the public desired size.  Allow
	Actual* to be completely computed for elements that operate that
	way.  Walk up the tree when rendering LayoutClip Make canvas
	slightly less special.

	* textblock.cpp:
	* textblock.h: Make Actual* a computed value.  Rework the
	results.

	* border.cpp:
	* canvas.cpp:
	* dirty.cpp:
	* grid.cpp:
	* layout.cpp:
	* media.cpp:
	* media.h:
	* mediaelement.cpp:
	* panel.cpp:
	* shape.cpp:
	* textbox.cpp:
	* usercontrol.cpp: rework the layout output now that we are
	storing our hidden desires.

	* runtime.cpp: disable ftb for now.  Use image surface by
	default.

	r: jackson

2009-11-10  Alan McGovern  <amcgovern@novell.com>

	* grid.h:
	* grid.cpp: Revert the grid changes in r145839 as they
	  interact badly with upcoming layout fixes. r: lewing
